[package]
name = "leetcode_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
leetcode_lib = { path = "./lib" }

[[bin]]
name = "sum_two_numbers"
path = "sum_two_numbers/src/main.rs"

[[bin]]
name = "most_frequent_prime_3044"
path = "most_frequent_prime_3044/src/main.rs"

[[bin]]
name = "integer_to_roman_12"
path = "integer_to_roman_12/src/main.rs"

[[bin]]
name = "maximum_ascending_subarray_sum_1800"
path = "maximum_ascending_subarray_sum_1800/src/main.rs"

[[bin]]
name = "sort_array_912"
path = "sort_array_912/src/main.rs"

[[bin]]
name = "longest_word_in_dictionary_524"
path = "longest_word_in_dictionary_524/src/main.rs"

[[bin]]
name = "number_of_ways_where_square_of_number_is_equal_to_product_1577"
path = "number_of_ways_where_square_of_number_is_equal_to_product_1577/src/main.rs"

[[bin]]
name = "plus_one_66"
path = "plus_one_66/src/main.rs"

[workspace]
members = [
    "lib",
    "most_frequent_prime_3044",
    "sum_two_numbers",
    "integer_to_roman_12",
    "maximum_ascending_subarray_sum_1800",
    "sort_array_912",
    "longest_word_in_dictionary_524",
    "number_of_ways_where_square_of_number_is_equal_to_product_1577",
    "plus_one_66"
] 
