[package]
name = "leetcode_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
leetcode_lib = { path = "./lib" }

[[bin]]
name = "add_binary_67"
path = "add_binary_67/src/main.rs"

[[bin]]
name = "integer_to_roman_12"
path = "integer_to_roman_12/src/main.rs"

[[bin]]
name = "longest_word_in_dictionary_524"
path = "longest_word_in_dictionary_524/src/main.rs"

[[bin]]
name = "maximum_ascending_subarray_sum_1800"
path = "maximum_ascending_subarray_sum_1800/src/main.rs"

[[bin]]
name = "most_frequent_prime_3044"
path = "most_frequent_prime_3044/src/main.rs"

[[bin]]
name = "number_of_ways_where_square_of_number_is_equal_to_product_1577"
path = "number_of_ways_where_square_of_number_is_equal_to_product_1577/src/main.rs"

[[bin]]
name = "plus_one_66"
path = "plus_one_66/src/main.rs"

[[bin]]
name = "sort_array_912"
path = "sort_array_912/src/main.rs"

[[bin]]
name = "sum_two_numbers"
path = "sum_two_numbers/src/main.rs"

[[bin]]
name = "three_sum_15"
path = "three_sum_15/src/main.rs"

[[bin]]
name = "concatenation_of_array_1929"
path = "concatenation_of_array_1929/src/main.rs"

[[bin]]
name = "shuffle_the_array_1470"
path = "shuffle_the_array_1470/src/main.rs"

[[bin]]
name = "maximum_product_of_splitted_binary_tree_1339"
path = "maximum_product_of_splitted_binary_tree_1339/src/main.rs"

[[bin]]
name = "max_consecutive_ones_485"
path = "max_consecutive_ones_485/src/main.rs"

[[bin]]
name = "set_mismatch_645"
path = "set_mismatch_645/src/main.rs"

[[bin]]
name = "ways_to_express_integer_2787"
path = "ways_to_express_integer_2787/src/main.rs"

[[bin]]
name = "smallest_subtree_with_all_deepest_nodes_865"
path = "smallest_subtree_with_all_deepest_nodes_865/src/main.rs"

[workspace]
members = [
    "lib",
    "add_binary_67",
    "integer_to_roman_12",
    "longest_word_in_dictionary_524",
    "maximum_ascending_subarray_sum_1800",
    "most_frequent_prime_3044",
    "number_of_ways_where_square_of_number_is_equal_to_product_1577",
    "plus_one_66",
    "sort_array_912",
    "sum_two_numbers",
    "three_sum_15",
    "concatenation_of_array_1929",
    "shuffle_the_array_1470",
    "maximum_product_of_splitted_binary_tree_1339",
    "max_consecutive_ones_485",
    "set_mismatch_645",
    "ways_to_express_integer_2787",
    "smallest_subtree_with_all_deepest_nodes_865"
]
